# SubtreeSync

./: README.md  add_subtree.py  main.py  pyproject.toml  requirements.txt  subtree-sync.py  subtree_repos.json  test_git_rich.py
src/: __init__.py  add.py  interactive.py  list.py  pull.py  push.py  remove.py  split.py  utils.py
subtreesync/: __main__.py  add.py  console.py  interactive.py  remove.py  utils.py
